ui: fix circles page ux
